# Liturgist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
samples/: README.md  order-of-worship.html  schedule.csv
src/liturgist/: __init__.py  cli.py  core.py
tests/: test_core.py
